2015-01-01  Ben Elliston  <bje@gnu.org>

	* config.guess: Update copyright years.
	* config.sub: Likewise.

2014-12-26  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Sort.

2014-12-21  James Bowman  <james.bowman@ftdichip.com>

	* config.sub (ft32): New.
	* testsuite/config-sub.data: Add a test case.

2014-12-03  Eric Botcazou  <ebotcazou@adacore.com>

	* config.sub (visium): New CPU type.
	* testsuite/config-sub.data: Add a test case.

2014-11-04  Ben Elliston  <bje@gnu.org>

	* config.guess (*:AIX:*:[4567]): Use /usr/biun/lslpp and not
	oslevel to determine the OS version number. This gives more a
	precise version number.	From Michael Felt.

2014-09-26  Olivier Hainque  <hainque@adacore.com>

	* config.sub (leon, leon[3-9]): New CPUs.
	* testsuite/config-sub.data: New tests for leon and leon3.

2014-09-11  Palmer Dabbelt  <palmer.dabbelt@eecs.berkeley.edu>

	* config.sub (riscv32, riscv64): New.
	* testsuite/config-sub.data: Add test cases.

2014-07-28  Anthony Green  <green@moxielogic.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub (moxiebox, -moxiebox*): New.
	* testsuite/config-sub.data: Add test cases.

2014-07-12  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Sort.

2014-05-01  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Add test cases for mipsisa*r6.

2014-05-01  Chao-ying Fu  <chao-ying.fu@imgtec.com>
	    Matthew Fortune  <matthew.fortune@imgtec.com>
	    Andrew Bennett  <andrew.bennett@imgtec.com>

	* config.sub (mipsisa32r6, mipsisa64r6): New.

2014-04-03  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.data: Sort.

2014-04-03  Ashish Kapania  <akapania@ti.com>
	    Ben Elliston  <bje@gnu.org>

	* config.sub (-tirtos*): New.
	* testsuite/config-sub.data: Add a test case.

2014-04-03  Ben Elliston  <bje@gnu.org>

	* testsuite/config-sub.sh (run_config-sub): Quote some variables
	to avoid spurious shell errors when a test case fails.

2014-03-23  Christian Svensson  <blue@cmd.nu>
